@@ -278,6 +278,10 @@ sub _no_table_error  {
     return $DBI::errstr && $DBI::errstr =~ /^-Table unknown|No such file or directory/m;
 }
 
+sub _no_column_error  {
+    return $DBI::errstr && $DBI::errstr =~ /^-Column unknown|/m;
+}
+
 sub _regex_op { 'SIMILAR TO' }               # NOT good match for
                                              # REGEXP :(
 
