@@ -1,6 +1,13 @@
 Revision history for Perl extension App::Sqitch
 
 0.999
+     - Improved MySQL missing table error detection by relying on error codes
+       instead of matching a (possibly localized) error string.
+     - Made the registry upgrade more transparent when deploying. Sqitch is
+       now is a little more vigilent in checking for things being out-of-date
+       and updating them.
+     - Fixed an issue where the `status` command would return an error when
+       run against a an older version of the registry.
 
 0.998  2015-01-15T22:17:44Z
      - Fixed a bug in `sqitch engine update-config` where it would add data to
